# Rust_os

./: Cargo.toml  README.md  rustc_wrapper.sh
.cargo/: config.toml
src/: allocator.rs  fs.rs  gdt.rs  interrupts.rs  main.rs  memory.rs  pacman.rs  pci.rs  serial.rs  shell.rs  vga_buffer.rs
src/gui/: mod.rs
src/net/: mod.rs  rtl8139.rs  wifi.rs
