[package]
name = "rust_os"
version = "0.1.0"
edition = "2021"
authors = ["Tatsuya <tatsuyamiura2667@gmail.com>"]

[dependencies]
bootloader = { version = "0.9.27", features = ["map_physical_memory"] }
volatile = "0.2.6"
spin = "0.5.2"
x86_64 = "0.14.13"
pic8259 = "0.10.1"
pc-keyboard = "0.7"
linked_list_allocator = "0.10.2"
uart_16550 = "0.2.0"
lazy_static = { version = "1.4", features = ["spin_no_std"] }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[package.metadata.bootimage]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04"]
